# gnome-doc-utils

./: ChangeLog  NEWS  configure.in  gnome-doc-utils.doap
doc/gnome-doc-make/: Makefile.am
doc/mallard/: Makefile.am
doc/mallard/fr/: fr.po
po/: ChangeLog  LINGUAS  ar.po  bb.po  en_GB.po  et.po  eu.po  fi.po  he.po  hi.po  kn.po  lv.po  mn.po  ne.po  pa.po  sl.po
tools/: gnome-doc-utils.make
xml2po/: ChangeLog  Makefile.am
xml2po/tests/: ChangeLog
xslt/gettext/: gettext.xsl
